Fix broken CSS

--- a/data/style.css
+++ b/data/style.css
@@ -16,13 +16,18 @@
     background-image: none;
     background-color: transparent;
     color: lighter(#3C6A81);
-    icon-shadow: 0px 1px 2px alpha(white, 0.3)
+    -gtk-icon-shadow: 0px 1px 2px alpha(white, 0.3)
 }
 
-MainWindow {
+.columbiad-view {
     background-image: -gtk-gradient(linear,
         left center, right bottom,
         from (darker(darker(#001B2E))), to(#001B2E));
+}
+
+GtkWindow {
+    background-image: none;
+    background-color: transparent;
 }
 
 .trough {
